--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<module>microservice-consumer-movie-ribbon-properties-customizing</module>
 		<module>microservice-consumer-movie-ribbon-without-eureka</module>
 		<module>microservice-consumer-movie-ribbon-test</module>
+		<module>microservice-consumer-movie-ribbon-with-hystrix</module>
 		<module>microservice-provider-user</module>
 		<module>microservice-discovery-eureka</module>
 		<module>microservice-discovery-eureka-ha</module>
