--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<module>microservice-consumer-movie</module>
 		<module>microservice-consumer-movie-feign</module>
 		<module>microservice-consumer-movie-feign-customizing</module>
+		<module>microservice-consumer-movie-feign-with-hystrix</module>
 		<module>microservice-consumer-movie-ribbon</module>
 		<module>microservice-consumer-movie-ribbon-properties-customizing</module>
 		<module>microservice-consumer-movie-ribbon-without-eureka</module>
