--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>microservice-consumer-movie-feign-customizing</module>
 		<module>microservice-consumer-movie-feign-customizing-without-hystrix</module>
 		<module>microservice-consumer-movie-feign-with-hystrix</module>
+		<module>microservice-consumer-movie-feign-with-hystrix-hystrix-factory</module>
 		<module>microservice-consumer-movie-ribbon</module>
 		<module>microservice-consumer-movie-ribbon-properties-customizing</module>
 		<module>microservice-consumer-movie-ribbon-without-eureka</module>
