--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<module>microservice-consumer-movie-ribbon-test</module>
 		<module>microservice-consumer-movie-ribbon-with-hystrix</module>
 		<module>microservice-consumer-movie-ribbon-with-hystrix-propagation</module>
+		<module>microservice-hystrix-dashboard</module>
 		<module>microservice-provider-user</module>
 		<module>microservice-discovery-eureka</module>
 		<module>microservice-discovery-eureka-ha</module>
