--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,13 @@
 		<module>microservice-consumer-movie-ribbon-without-eureka</module>
 		<module>microservice-consumer-movie-ribbon-test</module>
 		<module>microservice-consumer-movie-ribbon-with-hystrix</module>
+		<module>microservice-consumer-movie-ribbon-with-hystrix2</module>
+		<module>microservice-consumer-movie-ribbon-with-hystrix3</module>
 		<module>microservice-consumer-movie-ribbon-with-hystrix-propagation</module>
 		<module>microservice-hystrix-dashboard</module>
+		<module>microservice-hystrix-turbine</module>
+		<module>microservice-hystrix-turbine2</module>
+		<module>microservice-hystrix-turbine3</module>
 		<module>microservice-provider-user</module>
 		<module>microservice-discovery-eureka</module>
 		<module>microservice-discovery-eureka-ha</module>
@@ -43,7 +48,7 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Camden.SR1</version>
+				<version>Camden.SR2</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
