--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<module>microservice-consumer-movie-ribbon-with-hystrix2</module>
 		<module>microservice-consumer-movie-ribbon-with-hystrix3</module>
 		<module>microservice-consumer-movie-ribbon-with-hystrix-propagation</module>
+		<module>microservice-gateway-zuul</module>
 		<module>microservice-hystrix-dashboard</module>
 		<module>microservice-hystrix-turbine</module>
 		<module>microservice-hystrix-turbine2</module>
