--- a/microservice-gateway-zuul/src/main/resources/application.yml
+++ b/microservice-gateway-zuul/src/main/resources/application.yml
@@ -9,3 +9,7 @@ eureka:
       defaultZone: http://user:password123@localhost:8761/eureka
   instance:
     prefer-ip-address: true
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 60000
+ribbon:
+  ConnectTimeout: 3000
+  ReadTimeout: 60000
