--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 		<module>microservice-consumer-movie-ribbon-with-hystrix3</module>
 		<module>microservice-consumer-movie-ribbon-with-hystrix-propagation</module>
 		<module>microservice-gateway-zuul</module>
+		<module>microservice-gateway-zuul-filter</module>
 		<module>microservice-gateway-zuul-fallback</module>
 		<module>microservice-gateway-zuul-reg-exp</module>
 		<module>microservice-hystrix-dashboard</module>
