--- a/config-learning/pom.xml
+++ b/config-learning/pom.xml
@@ -10,6 +10,7 @@
 
 	<modules>
 		<module>microservice-config-server</module>
+		<module>microservice-config-server-encrypt</module>
 		<module>microservice-config-client</module>
 	</modules>
 	
