--- a/config-learning/pom.xml
+++ b/config-learning/pom.xml
@@ -11,6 +11,7 @@
 	<modules>
 		<module>microservice-config-server</module>
 		<module>microservice-config-server-encrypt</module>
+		<module>microservice-config-server-encrypt-rsa</module>
 		<module>microservice-config-client</module>
 	</modules>
 	
