--- a/config-learning/pom.xml
+++ b/config-learning/pom.xml
@@ -10,9 +10,11 @@
 
 	<modules>
 		<module>microservice-config-server</module>
+		<module>microservice-config-server-authc</module>
 		<module>microservice-config-server-encrypt</module>
 		<module>microservice-config-server-encrypt-rsa</module>
 		<module>microservice-config-client</module>
+		<module>microservice-config-client-authc</module>
 	</modules>
 	
 	<properties>
