--- a/config-learning/pom.xml
+++ b/config-learning/pom.xml
@@ -13,8 +13,10 @@
 		<module>microservice-config-server-authc</module>
 		<module>microservice-config-server-encrypt</module>
 		<module>microservice-config-server-encrypt-rsa</module>
+		<module>microservice-config-server-eureka</module>
 		<module>microservice-config-client</module>
 		<module>microservice-config-client-authc</module>
+		<module>microservice-config-client-eureka</module>
 	</modules>
 	
 	<properties>
