--- a/config-learning/pom.xml
+++ b/config-learning/pom.xml
@@ -17,6 +17,7 @@
 		<module>microservice-config-client</module>
 		<module>microservice-config-client-authc</module>
 		<module>microservice-config-client-eureka</module>
+		<module>microservice-config-client-refresh</module>
 	</modules>
 	
 	<properties>
