--- a/config-learning/pom.xml
+++ b/config-learning/pom.xml
@@ -18,6 +18,7 @@
 		<module>microservice-config-client-authc</module>
 		<module>microservice-config-client-eureka</module>
 		<module>microservice-config-client-refresh</module>
+		<module>microservice-config-client-refresh-bus</module>
 	</modules>
 	
 	<properties>
